rnsc/test_data/rns_integration/error/parser/outside_class_directive/after_class_dir/integer.rns
.class public EmptyClass
.super java/lang/Object

.class_end
42 ; the answer
